k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
spec:
  selector:
    app: wisecow              
  ports:
    - name: http
      protocol: TCP
      port: 80              
      targetPort: 4499      
  type: NodePort
